Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignTextTextField.quorum
class Main
    text v = Test()
    action Main
        if v = "text"
            output "passed"
        end
    end

    action Test() returns text
        text var = "text"
        return var
    end
end