Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjTextField.quorum
class Main
    text v = "text"
    action Main
        Test(v)
    end

    action Test(Number var)
    end
end
